tests/NormalTests/paczka2/big_fuzzy/75430600.err
Error in line 4: L9X A971 31,9
Error in line 13: sIciplLxAZG A154 61,9
Error in line 20: S790 A971 53,8
Error in line 15: 4d7re0czeA A470 84,3
Error in line 28: v7W S790 1,7
Error in line 39: 2S4 S790 29,33
Error in line 27: sIciplLxAZG S790 52,7
Error in line 47: S790 A154 20,6
Error in line 44: 4d7re0czeA A154 49,6
Error in line 55: S790 S790 33,7
Error in line 61: 4d7re0czeA S790 54,2
Error in line 40: T9mw0Fgh A154 24,4
Error in line 62: 4d7re0czeA A971 34,6
Error in line 69: sIciplLxAZG A470 131,9
Error in line 75: L9X A971 403,8
Error in line 83: L9X A154 6,5
Error in line 84: L9X A971 84,1
Error in line 79: 2S4 S790 33,1
Error in line 73: T9mw0Fgh A971 89,1
Error in line 90: T9mw0Fgh S790 81,9
Error in line 94: T9mw0Fgh A154 74,8
Error in line 101: S790 A470 46,1
Error in line 85: L9X A154 20,6
Error in line 108: sIciplLxAZG A154 10,4
Error in line 115: S790 A154 48,8
Error in line 116: sIciplLxAZG S790 10,0
Error in line 124: 4d7re0czeA S790 96,7
Error in line 127: sIciplLxAZG A154 132,88
Error in line 120: T9mw0Fgh A470 30,4
Error in line 128: L9X S790 86,6
Error in line 142: L9X A154 33,5
Error in line 149: L9X A470 67,1
Error in line 153: 4d7re0czeA A470 76,2
Error in line 161: sIciplLxAZG A470 49,9
Error in line 167: S790 A154 96,4
Error in line 168: 2S4 A154 51,9
Error in line 179: T9mw0Fgh A154 11,9
Error in line 190: 4d7re0czeA A154 29,7
Error in line 176: sIciplLxAZG S790 9,7
Error in line 194: 2S4 A154 50,6
Error in line 200: 2S4 S790 34,4
Error in line 208: 4d7re0czeA A971 36,7
Error in line 184: v7W A470 40,2
Error in line 211: v7W S790 54,9
Error in line 214: 2S4 470 13,2
Error in line 212: v7W A470 30,8
Error in line 209: 4d7re0czeA A470 28,7
Error in line 219: sIciplLxAZG S790 49,2
Error in line 225: T9mw0Fgh A470 83,1
Error in line 217: L9X S790 64,0
Error in line 233: L9X A470 75,0
Error in line 240: L9X A154 220,35
Error in line 230: T9mw0Fgh A470 77,8
Error in line 239: v7W A154 60,1
Error in line 246: sIciplLxAZG S790 15,3
